@@ -1,3 +1,8 @@
+2010-04-19  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tkWinPort.h  Fix [Patch 2986105]: conditionally defining
+	strcasecmp/strncasecmp
+
 2010-03-12  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tkButton.h:	[Bug 2956548]: TkpButtonSetDefaults only
